11-kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: word-cloud-generator
  template:
    metadata:
      labels:
        app: word-cloud-generator
    spec:
      containers:
        - name: word-cloud-generator
          image: ghcr.io/${GITHUB-REPOSITORY-OWNER}/wcg:latest
          ports:
            - name: app-port
              containerPort: ${APP-PORT}
