11-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wcg-service
spec:
  selector:
    app: word-cloud-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: app_port
  type: ClusterIP
