11-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcg-ingress
spec:
  rules:
    - host: wcg.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wcg-service
                port:
                  number: 80
